Fix missing menu items.

Make sure all menu related actions are created before calling  KXMLGUIClient::setXMLFile.
The actual signal connections can happen later.

Perfer having MergeResultWindow handle the creation and connection
of merge related actions that depend on it to function. Avoids potential
nullptr issue if one is triggered unexpectedly early in startup.  This also
improves readability KDiff3App is quite large even without this and would
just have small wrapper functions for these actions.

Thanks turtle@think-electric.com for spotting the bug.

BUG: 411602
FIXED-IN: 1.8.2